--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "compile": "sass --watch --no-source-map src/main.scss src/style.css",
     "build:compile": "sass --no-source-map src/main.scss build/compiled.css",
-    "build:prefix": "postcss build/compiled.css --use autoprefixer -d build/prefixed.css",
-    "build:optimize": "csso build/prefixed.css build/style.css"
+    "build:prefix": "postcss build/compiled.css --use autoprefixer --output build/prefixed.css",
+    "build:optimize": "csso build/prefixed.css --output build/style.css"
   },
   "repository": {
     "type": "git",
